--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/sanctum": "^2.6",
         "laravel/scout": "^9.1",
         "laravel/tinker": "^2.5",
-        "livewire/livewire": "^2.0"
+        "livewire/livewire": "^2.0",
+        "realrashid/sweet-alert": "^4.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
