--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/scout": "^9.1",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.0",
+        "maatwebsite/excel": "^3.1",
         "realrashid/sweet-alert": "^4.0"
     },
     "require-dev": {
